src/layout/about/About.css
/* about section that contains my photo, name, title, location, and social links*/
.about {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: var(--bg-size);
}

/* about items container */
.about .my {
  display: flex;
  padding-inline: var(--bg-size);
  height: 5rem;
  width: 48.5%;
  border-radius: var(--radius);
  min-width: 19.375rem;
  border: 1px solid var(--border-light);
}

/* Wrapper for about-me */
.about .about-me.hidden {
  opacity: 0;
  transform: translate(-2.5rem, 0);
  align-items: center;
  gap: 1rem;
  transition: all 0.7s ease-in-out;
}

.about .about-me.show {
  opacity: 1;
  transform: translate(0, 0);
}

/* Circular image wrapper with border */
.about-me .image-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  position: relative;
  height: 50px;
  border: 3px solid var(--dark-clr);
  aspect-ratio: 1/1;
  background-color: var(--light-clr);
}

/* Decorative gradient border */
.about-me .image-wrapper::before {
  position: absolute;
  content: "";
  height: 54px;
  aspect-ratio: 1/1;
  background: var(--gradient);
  border-radius: inherit;
  z-index: -10;
}

/* Icon inside image wrapper */
.about-me .image-wrapper .icon {
  color: var(--dark-clr);
  font-size: var(--icon-md);
  opacity: 0.7;
}

.image-wrapper img {
  border-radius: inherit;
  position: absolute;
  border: 3px solid var(--dark-clr);
}

/* personal info  */
.about-me .personal-info-wrapper {
  display: flex;
  flex-direction: column;
}

/* profession */
.personal-info-wrapper .profession {
  opacity: 0.7;
}

/* Location */
.personal-info-wrapper .location {
  display: flex;
  align-items: center;
  gap: var(--sm-size);
  font-size: 0.75rem;
  opacity: 0.7;
}

/* social links */
.about .social-links.hidden {
  display: flex;
  align-items: center;
  gap: var(--sm-size);
  position: relative;
  padding-top: var(--md-size);
  min-width: 310px;
  transform: translate(2.5rem, 0);
  opacity: 0;
  transition: all 0.7s ease-in-out;
}

.about .social-links.show {
  opacity: 1;
  transform: translate(0, 0);
}

/* Title text for links */
.about .link-title {
  position: absolute;
  font-size: 0.75rem;
  top: 7px;
  left: 30px;
  opacity: 0.7;
}

/* full width on smaller devices */
@media (max-width: 700px) {
  .about .my {
    width: 100%;
  }
  /* Wrapper for about-me */
  .about .about-me.hidden {
    transform: translate(0, 2.5rem);
  }
  .about .about-me.show {
    transform: translate(0, 0);
  }
  /* social links */
  .about .social-links.hidden {
    transform: translate(0, 2.5rem);
  }
  .about .social-links.show {
    transform: translate(0, 0);
  }
}

